--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,8 +30,12 @@ requirements:
     - {{ pin_compatible('numpy') }}
 
 test:
+  requires:
+    - pkg-config
   imports:
     - eigenpy
+  commands:
+    - pkg-config --modversion eigenpy
 
 about:
   home: http://github.com/stack-of-tasks/eigenpy
