--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,16 +8,20 @@ package:
 source:
   url: https://github.com/stack-of-tasks/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: 958b6c971d061341eadacaa293c5cf34f5f94ecc1a3c04383d366a5a9b198bf7
+  patches:
+    - alt-sitelib-root.patch
 
 build:
   number: 0
-  skip: true  # [win]
+  skip: true  # [win and vc<14]
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
+    - {{ compiler('cxx') }}  # [not win]
+    - vs2017_win-64  # [win64]
+    - vs2017_win-32  # [win32]
     - cmake
-    - make
+    - make  # [not win]
     - pkg-config
   host:
     - eigen
@@ -50,3 +54,4 @@ extra:
     - jcarpent
     - wolfv
     - lesteve
+    - seanyen
