--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,15 +20,18 @@ requirements:
     - vs2017_win-32  # [win32]
     - cmake
     - make  # [not win]
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
   host:
     - eigen
-    - boost  # [build_platform != target_platform]
-    - python  # [build_platform != target_platform]
-    - numpy  # [build_platform != target_platform]
+    - boost
+    - python
+    - numpy
   run:
     - eigen
-    - boost  # [build_platform != target_platform]
-    - python  # [build_platform != target_platform]
+    - boost
+    - python
     - {{ pin_compatible('numpy') }}
 
 test:
