--- a/.ci_support/osx_arm64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_python3.9.____cpython.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '11.0'
+boost:
+- 1.74.0
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge
 channel_targets:
@@ -12,5 +14,16 @@ macos_machine:
 - arm64-apple-darwin20.0.0
 numpy:
 - '1.19'
+pin_run_as_build:
+  boost:
+    max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- 3.9.* *_cpython
 target_platform:
 - osx-arm64
+zip_keys:
+- - python
+  - numpy
