--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,17 +22,18 @@ requirements:
     - make  # [not win]
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - numpy
+    - cython                                 # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
   host:
     - eigen
     - boost
-    - python
     - numpy
+    - python
   run:
     - eigen
     - boost
-    - python
     - {{ pin_compatible('numpy') }}
+    - python
 
 test:
   requires:
