--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://github.com/stack-of-tasks/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: 461172077e348546f9a59b88471dc95f629f5cad9f56dc7f84fad46de82aad14
+  patches:
+    - patches/all.patch
 
 build:
   number: 0
