--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,9 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}  # [not win]
-    - vs2017_win-64  # [win64]
-    - vs2017_win-32  # [win32]
     - cmake
     - make  # [not win]
+    - ninja  # [win]
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
