--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,7 @@ requirements:
   build:
     - {{ compiler('cxx') }}
     - cmake
+    - clang  # [win]
     - make  # [not win]
     - ninja  # [win]
     - python                                 # [build_platform != target_platform]
