--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,6 @@ source:
 
 build:
   number: 1
-  # There is no Numpy >= 2.1 on Python 3.9
-  skip: true  # [win and py<310]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x.x') }}
 
@@ -35,7 +33,8 @@ requirements:
   host:
     - eigen
     - libboost-python-devel
-    # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL
+    # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL.
+    # This has been fixed in Numpy 2.1.
     - numpy >=1.19,<2|>=2.1  # [win]
     - numpy                  # [not win]
     - python
