--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,14 +35,16 @@ requirements:
     - libboost-python-devel
     # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL.
     # This has been fixed in Numpy 2.1.
-    - numpy >=1.19,<2|>=2.1  # [win]
-    - numpy                  # [not win]
+    - numpy >=2.1      # [win and py>=310]
+    - numpy >=1.19,<2  # [win and py<310]
+    - numpy            # [not win]
     - python
     - scipy
   run:
     - eigen
     - libboost-python-devel
-    - numpy >=1.19,<2|>=2.1  # [win]
+    - numpy >=2.1                    # [win and py>=310]
+    - {{ pin_compatible('numpy') }}  # [win and py<310]
     - python
     - scipy
 
