--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,8 @@ requirements:
     # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL.
     # This has been fixed in Numpy 2.1.
     - numpy >=2.1      # [win and py>=310]
+    # Unfortunatly, Numpy 2.1 is not distributed with Python 3.9.
+    # We are forced to use Numpy 1 in this case.
     - numpy >=1.19,<2  # [win and py<310]
     - numpy            # [not win]
     - python
