--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -33,31 +33,25 @@ requirements:
   host:
     - eigen
     - libboost-python-devel
-    - if: win
-      then:
-        - if: match(python, ">=3.10")
-          then:
-            # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL.
-            # This has been fixed in Numpy 2.1.
-            - numpy >=2.1
-          else: # if python < 3.10
-            # Unfortunatly, Numpy 2.1 is not distributed with Python 3.9.
-            # We are forced to use Numpy 1 in this case.
-            - numpy >=1.19,<2
-      else: # if not win
-        - numpy
+      # On Windows, Numpy 2.0 don't allow to export the PY_ARRAY_UNIQUE_SYMBOL.
+      # This has been fixed in Numpy 2.1.
+    - if: win and match(python, ">=3.10")
+      then: numpy >=2.1
+      # Unfortunatly, Numpy 2.1 is not distributed with Python 3.9.
+      # We are forced to use Numpy 1 in this case.
+    - if: win and match(python, "<3.10")
+      then: numpy >=1.19,<2
+    - if: not win
+      then: numpy
     - python
     - scipy
   run:
     - eigen
     - libboost-python-devel
-    - if: win
-      then:
-        - if: match(python, ">=3.10")
-          then:
-            - numpy >=2.1
-          else: # if python < 3.10
-            - ${{ pin_compatible('numpy') }}
+    - if: win and match(python, ">=3.10")
+      then: numpy >=2.1
+    - if: win and match(python, "<3.10")
+      then: ${{ pin_compatible('numpy') }}
     - python
     - scipy
   run_exports:
